--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -8,3 +8,33 @@
     display: none; /* Chrome, Safari, Opera */
   }
   
+
+
+
+.form-fields {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+
+
+
+.input-field-3 {
+  height: 2.5rem;
+  width: 185px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-size: 0.875rem;
+  background-color: #fff;
+  border: 1px solid rgba(134,143,160,0.16);
+  box-shadow: 0 1px 2px rgba(0,0,0,0.06);
+  border-radius: 0.375rem;
+  outline: none;
+}
+.input-field:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px var(--color-primary, #2563eb);
+}
